syntax = "proto3";

package acme.call.v1;

message StorageChange {
  string address = 1;
  string key = 2;

  string preimg = 3;

  string old_value = 4;
  string new_value = 5;

  uint64 ordinal = 6;
}

message Call {
  string address = 1;
  repeated StorageChange storage_changes = 2;
}

message BlockCall {
  repeated Call calls = 1;
}
